# client-server-instant-messenger

./: .gitignore  README.md  package.json
.github/workflows/: node.js.yml  pylint.yml
.next/server/pages/: login.js
.next/static/chunks/: webpack.js
.next/static/webpack/: 879a13d96f9151cc.webpack.hot-update.json  8beaeeeaaf46cd4b.webpack.hot-update.json  b00c462add8c4a3a.webpack.hot-update.json  e4e5bfae7ed0604d.webpack.hot-update.json  webpack.0d3d3fd3ccec953a.hot-update.js  webpack.259f1ae1c1a799b8.hot-update.js  webpack.2967560ee526376c.hot-update.js  (+12 more)
backend/: .coveragerc  .env.clean  .flake8  .pylintrc  __init__.py  alembic.ini  app.py  requirements.in  requirements.txt  routes.py  setup.cfg  sockets.py
backend/alembic/: env.py
backend/alembic/versions/: 1b1b969f1575_first_generated_commit.py  21b2f657b620_added_uuid_to_chatroom.py  4bcc9539db53_create_test_table.py  71d72a921a92_upgraded_orm_entities_to_latest_models.py  7c687f15a1e3_updates_to_the_user_model.py  bab86a03595d_added_name_uniqueness_constraint_to_.py  c58aab59fea1_upgraded_orm_entities_to_latest_models.py
backend/db/: model.py
backend/test/: routes_test.py
backend/tests/: test_routes.py  test_sockets.py
frontend/: .gitignore  env-local.js  package-lock.json  package.json
frontend/.next/: build-manifest.json  trace
frontend/__mocks__/: mockFetch.js
frontend/__tests__/: ConversationPanel.test.js  CreateChat.test.js  login.test.js
frontend/public/: env.js
frontend/src/: config.json  config.json.clean  setupTests.js  styles.module.css
testing/: README.md
(+249 files in other folders)
