[metadata]
name = csim
version = 0.1.0
description = Simple chat app. UCSC CSE115a Fall 2022

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    flask_cors
    requests
    dotenv

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr